[package]
name = "panos_rust_sdk"
version = "0.1.0"
edition = "2021"

# While developing, we don't want to create public releases, but we still want a working release process.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
