[package]
name = "panos_rust_sdk"
description = "A Rust SDK for the Palo Alto Networks Operating System for Panorama and Next Generation Firewalls"
version = "0.1.1"
edition = "2021"
authors = [
  "abaumeister@paloaltonetworks.com"
]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
