[package]
name = "panos_rust_sdk"
description = "A Rust SDK for the Palo Alto Networks Operating System for Panorama and Next Generation Firewalls"
version = "0.1.0"
edition = "2021"
authors = [
  "abaumeister@paloaltonetworks.com"
]
license = "MIT"

[dependencies]
reqwest =  { version = "0.11.22", features = ["blocking", "json", "rustls-tls", "__rustls"] }
tokio = "1.35.0"
url = "2.5.0"
log = "0.4.20"
